# bang-cli

./: Cargo.toml  LICENSE  README.md
assets/: bangs.json
scripts/: bang-wrapper.sh  rofi.sh  wofi.sh
src/: bangs.rs  cli.rs  data_io.rs  main.rs
