[package]
name = "banger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
clap = { version = "4.5.39", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
urlencoding = "2.1.3"
